[project]
name = "comfyui_mittimi_load_preset2"
description = "This node can easily switch between models and prompts by saving presets."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadPreset2"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiLoadPreset2"
Icon = ""
